--- a/JCBear/index.html
+++ b/JCBear/index.html
@@ -47,7 +47,7 @@
                         newElement.setAttribute('visible', 'true')
                         newElement.setAttribute('animation', {
                             property: 'scale',
-                            to: '0.2 0.2 0.2',
+                            to: '0.1 0.1 0.1',
                             easing: 'easeOutElastic',
                             dur: 800,
                         })
@@ -55,9 +55,9 @@
 
                     // class="cantap" hold-drag two-finger-spin pinch-scale
                     newElement.setAttribute('class', 'cantap')
-                    newElement.setAttribute(hold-drag)
-                    newElement.setAttribute(two-finger-spin)
-                    newElement.setAttribute(pinch-scale)
+                    newElement.setAttribute('hold-drag')
+                    newElement.setAttribute('two-finger-spin')
+                    newElement.setAttribute('pinch-scale')
                 }, {once: true})
             }
         })
