--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -21,13 +21,13 @@
     <script async
             src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
 
-    <script>
-        window.onload = function () {
-            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {
-                window.location.href = "room.html"
-            }
-        };
-    </script>
+<!--    <script>-->
+<!--        window.onload = function () {-->
+<!--            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {-->
+<!--                window.location.href = "room.html"-->
+<!--            }-->
+<!--        };-->
+<!--    </script>-->
 
     <script>
         // Component that places trees where the ground is clicked
