--- a/AFrame/simpleTest.html
+++ b/AFrame/simpleTest.html
@@ -1,17 +1,12 @@
-<!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<!-- include ar.js for A-Frame -->
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>BackToWechat</title>
+</head>
 
-<body style='margin : 0px; overflow: hidden;'>
-<a-scene embedded arjs>
-    <a-assets>
-        <a-asset-item id="SETs" src="GLTF/KIT_s.gltf"></a-asset-item>
-    </a-assets>
-    <!-- create your content here. just a box for now -->
-    <a-entity gltf-model="#SETs" id="SETs_E" position="0 0.2 0" scale="0.15 0.15 0.15" rotation="0 0 0"></a-entity>
-<!--    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
-    <!-- define a camera which will move according to the marker position -->
-    <a-marker-camera preset='hiro'></a-marker-camera>
-</a-scene>
+<body>
+<div><a href="weixin://">back to wechat</a></div>
+
 </body>
+</html>
