--- a/WebViewer_test/index.html
+++ b/WebViewer_test/index.html
@@ -85,7 +85,7 @@
 <!--    </div>-->
 <!--</div>-->
 
-<model-viewer src="assets/house.glb" ios-src="assets/Astronaut.usdz" ar camera-controls autoplay
+<model-viewer src="assets/RobotExpressive.glb" ios-src="assets/Astronaut.usdz" ar camera-controls autoplay
               alt="A 3D model of an astronaut" background-color="#222" magic-leap unstable-webxr
               shadow-intensity="1"></model-viewer>
 
