--- a/WebViewer_test/8thwall.html
+++ b/WebViewer_test/8thwall.html
@@ -20,98 +20,77 @@
     <!-- 8thWall Web - Replace the app key here with your own app key -->
     <script async
             src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
-
-    <!--    <script>-->
-    <!--        window.onload = function () {-->
-    <!--            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {-->
-    <!--                window.location.href = "room.html"-->
-    <!--            }-->
-    <!--        };-->
-    <!--    </script>-->
-
-    <script>
-        // Component that places trees where the ground is clicked
-        AFRAME.registerComponent('tap-place', {
-            init: function () {
-                const ground = document.getElementById('ground')
-                ground.addEventListener('click', event => {
-                    // Create new entity for the new object
-                    const newElement = document.createElement('a-entity')
-
-                    // The raycaster gives a location of the touch in the scene
-                    const touchPoint = event.detail.intersection.point
-                    newElement.setAttribute('position', touchPoint)
-
-                    const randomYRotation = Math.random() * 360
-                    newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')
-
-                    newElement.setAttribute('visible', 'false')
-                    newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
-
-                    newElement.setAttribute('gltf-model', '#KTC')
-                    this.el.sceneEl.appendChild(newElement)
-
-                    newElement.addEventListener('model-loaded', () => {
-                        // Once the model is loaded, we are ready to show it popping in using an animation
-                        newElement.setAttribute('visible', 'true')
-                        newElement.setAttribute('id', 'house')
-                        newElement.setAttribute('animation', {
-                            property: 'scale',
-                            to: '0.2 0.2 0.2',
-                            easing: 'easeOutElastic',
-                            dur: 800,
-                        })
-                    })
-                }, {once: true})
-            }
-        })
-    </script>
 </head>
 
 <body>
-
-
 <!-- We must add the tap-place component to the scene so it has an effect -->
 <a-scene
         xrweb
-        tap-place
         xrextras-almost-there
         xrextras-loading
         xrextras-runtime-error>
-    <a-entity position="0 2.25 -15" particle-system="preset: snow; particleCount: 5000"></a-entity>
+    <a-camera position="0 3 0"></a-camera>
+    <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
+    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
+    <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+</a-scene>
 
-    <!-- We can define assets here to be loaded when A-Frame initializes -->
-    <a-assets>
-        <a-asset-item id="KTC" src="assets/AnimatedMorphSphere.gltf"></a-asset-item>
-    </a-assets>
+<a-scene
+        xrweb
+        xrextras-tap-recenter
+        xrextras-almost-there
+        xrextras-loading
+        xrextras-runtime-error>
 
-    <!-- The raycaster will emit mouse events on scene objects specified with the cantap class -->
-    <a-camera
-            position="0 0 0"
-            raycaster="objects: .cantap"
-            cursor="
-          fuse: false;
-          rayOrigin: mouse;">
-
-    </a-camera>
+    <a-camera position="0 8 8"></a-camera>
 
     <a-entity
             light="type: directional;
-               intensity: 0.8;"
+               castShadow: true;
+               intensity: 0.8;
+               shadowCameraTop: 7;
+               shadowMapHeight: 1024;
+               shadowMapWidth: 1024;"
             position="1 4.3 2.5">
+    </a-entity>
+
+    <a-entity
+            light="type: directional; castShadow: false; intensity: 0.5;"
+            position="-0.8 3 1.85">
     </a-entity>
 
     <a-light type="ambient" intensity="1"></a-light>
 
-    <!-- Adding the cantap class allows the ground to be clicked -->
-    <a-entity
-            id="ground"
-            class="cantap"
-            geometry="primitive: box"
-            material="color: #ffffff; transparent: true; opacity: 0.0"
-            scale="1000 2 1000"
-            position="0 -1 0">
-    </a-entity>
+    <a-box
+            position="-1.7 0.5 -2"
+            rotation="0 45 0"
+            material="roughness: 0.8; metalness: 0.2; color: #00EDAF;"
+            shadow>
+    </a-box>
+
+    <a-sphere
+            position="-1.175 1.25 -5.2"
+            radius="1.25"
+            material="roughness: 0.8; metalness: 0.2; color: #DD0065;"
+            shadow>
+    </a-sphere>
+
+    <a-cylinder
+            position="2 0.75 -1.85"
+            radius="0.5"
+            height="1.5"
+            material="roughness: 0.8; metalness: 0.2; color: #FCEE21;"
+            shadow>
+    </a-cylinder>
+
+    <a-circle
+            position="0 0 -4"
+            rotation="-90 0 0"
+            radius="4"
+            material="roughness: 0.8; metalness: 0.5; color: #AD50FF"
+            shadow>
+    </a-circle>
 </a-scene>
 </body>
 </html>
