--- a/JCBear/ARScene.html
+++ b/JCBear/ARScene.html
@@ -39,15 +39,32 @@
     <!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
     <script src="js/focus-visible.js" defer></script>
 
+    <script>
+        function GetRequest() {
+            var url = decodeURI(location.search); //获取url中"?"符后的字串
+            var theRequest = new Object();
+            if (url.indexOf("?") != -1) {
+                var str = url.substr(1);
+                strs = str.split("&");
+                for (var i = 0; i < strs.length; i++) {
+                    theRequest[strs[i].split("=")[0]] = unescape(strs[i].split("=")[1]);
+                }
+            }
+            return theRequest;
+        }
+
+        var Request = undefined;
+        Request = GetRequest();
+        var shoeColor = Request["color"];
+
+
+    </script>
+
     <style>
         div {
             font-size: 2rem;
             z-index: 10;
-            /*width: 30%;*/
-            /*height: 4.5rem;*/
             user-select: none;
-            /*display: block;*/
-            /*border-radius: 1rem;*/
             position: absolute;
             bottom: 0;
             left: 0;
@@ -55,7 +72,7 @@
             margin: 2rem auto;
         }
 
-        model-viewer{
+        model-viewer {
             width: 100%;
             height: 500px;
         }
@@ -63,27 +80,6 @@
 </head>
 
 <body>
-<!--<div class="sample">-->
-<!--    <div id="demo-container-1" class="demo"></div>-->
-<!--    <div class="content">-->
-<!--        <div class="wrapper">-->
-
-<!--            <a class="lockup" href="../index.html">-->
-<!--                <div class="icon-button icon-modelviewer-black"></div>-->
-<!--                <h1>examples</h1></a>-->
-<!--            <div class="heading">-->
-<!--                <h2 class="demo-title">Augmented Reality</h2>-->
-<!--                <h4>This demonstrates several augmented reality features, including <code>unstable-webxr</code>, <code>magic-leap</code>,-->
-<!--                    <code>ios-src</code>, &amp; the accompanying attribute <code>quick-look-browsers</code>.</h4>-->
-<!--            </div>-->
-<!--            <template>-->
-<!--                <model-viewer src="assets/Astronaut.glb" ar camera-controls alt="A 3D model of an astronaut"-->
-<!--                              background-color="#222" ios-src="assets/Astronaut.usdz" magic-leap-->
-<!--                              unstable-webxr></model-viewer>-->
-<!--            </template>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
 <model-viewer src="assets/RobotExpressive.glb" ios-src="assets/Astronaut.usdz" ar camera-controls autoplay
               alt="A 3D model of an astronaut" background-color="#222" magic-leap unstable-webxr
