--- a/JCBear/shoeCh.html
+++ b/JCBear/shoeCh.html
@@ -3,8 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no,
+  minimum-scale=1.0, maximum-scale=1.0">
+
+    <!-- 💁 Include both scripts below to support all browsers! -->
+
+    <!-- Loads <model-viewer> for modern browsers: -->
+    <script type="module"
+            src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js">
+    </script>
+
+    <!-- Loads <model-viewer> for old browsers like IE11: -->
+    <script nomodule
+            src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
+    </script>
+
+    <link type="text/css" rel="stylesheet" href="css/examples.css">
+
+    <!-- The following libraries and polyfills are recommended to maximize browser support -->
+
+    <!-- 🚨 REQUIRED: Web Components polyfill to support Edge and Firefox < 63 -->
+    <script src="js/webcomponents-loader.js"></script>
+
+    <!-- 💁 OPTIONAL: Intersection Observer polyfill for better performance in Safari and IE11 -->
+    <script src="js/intersection-observer.js"></script>
+
+    <!-- 💁 OPTIONAL: Resize Observer polyfill improves resize behavior in non-Chrome browsers -->
+    <script src="js/ResizeObserver.js"></script>
+
+    <!-- 💁 OPTIONAL: Fullscreen polyfill is needed to fully support AR features -->
+    <script src="js/fullscreen.polyfill.js"></script>
+
+    <!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
+    <script src="js/focus-visible.js" defer></script>
+
+
+
+    <style>
+        div {
+            font-size: 2rem;
+            z-index: 10;
+            user-select: none;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: 2rem auto;
+        }
+
+        model-viewer {
+            width: 100%;
+            height: 500px;
+        }
+    </style>
 </head>
+
 <body>
-<h1>Choose your shoe</h1>
+
+<model-viewer ar camera-controls alt="A 3D model" id="shoeShow"
+              background-color="#222" magic-leap unstable-webxr shadow-intensity="1"></model-viewer>
+
+<script>
+    function GetRequest() {
+        var url = decodeURI(location.search); //获取url中"?"符后的字串
+        var theRequest = new Object();
+        if (url.indexOf("?") != -1) {
+            var str = url.substr(1);
+            strs = str.split("&");
+            for (var i = 0; i < strs.length; i++) {
+                theRequest[strs[i].split("=")[0]] = unescape(strs[i].split("=")[1]);
+            }
+        }
+        return theRequest;
+    }
+
+    var Request = undefined;
+    Request = GetRequest();
+    var shoeColor = Request["color"];
+
+    var shoeSRC = null;
+    switch (shoeColor) {
+        case "white":
+            shoeSRC = "Models/shoeW.glb";
+            break;
+        case "black":
+            shoeSRC = "Models/shoeB.glb";
+            break;
+        case "green":
+            shoeSRC = "Models/shoeG.glb";
+            break;
+        case "red":
+            shoeSRC = "Models/shoeR.glb";
+            break;
+        case "purple":
+            shoeSRC = "Models/shoeP.glb";
+            break;
+    }
+
+    var obj = document.getElementById('shoeShow');
+    obj.setAttribute('src', shoeSRC);
+</script>
+
 </body>
 </html>
