--- a/JCBear/shoeCh.html
+++ b/JCBear/shoeCh.html
@@ -62,6 +62,7 @@
 
 <body>
 
+<!--还需要苹果的USDZ文件，来实现苹果的AR-->
 <model-viewer ar camera-controls alt="A 3D model" id="shoeShow"
               background-color="#222" magic-leap unstable-webxr shadow-intensity="1"></model-viewer>
 
