--- a/JCBear/shoeCh.html
+++ b/JCBear/shoeCh.html
@@ -63,7 +63,7 @@
 <body>
 
 <!--还需要苹果的USDZ文件，来实现苹果的AR-->
-<model-viewer ar camera-controls alt="A 3D model" id="shoeShow"
+<model-viewer ar camera-controls alt="A 3D model" id="shoeShow" ios-src="Models/bee8.usdz"
               background-color="#222" magic-leap unstable-webxr shadow-intensity="1"></model-viewer>
 
 <script>
