--- a/JCBear/shoeCh.html
+++ b/JCBear/shoeCh.html
@@ -12,12 +12,12 @@
 
     <!-- Loads <model-viewer> for modern browsers: -->
     <script type="module"
-            src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js">
+            src="js/model-viewer.js">
     </script>
 
     <!-- Loads <model-viewer> for old browsers like IE11: -->
     <script nomodule
-            src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
+            src="js/model-viewer-legacy.js">
     </script>
 
     <link type="text/css" rel="stylesheet" href="css/examples.css">
@@ -38,8 +38,6 @@
 
     <!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
     <script src="js/focus-visible.js" defer></script>
-
-
 
     <style>
         div {
