--- a/JCBear/360.html
+++ b/JCBear/360.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <title>Tap to place</title>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="js/aframe.min.js"></script>
     <script>
         AFRAME.registerComponent('navigate-on-click', {
             schema: {
