--- a/JCBear/BearVR.html
+++ b/JCBear/BearVR.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>place</title>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="js/aframe.min.js"></script>
     <script src="js/aframe-extras.min.js"></script>
 <!--    <script src="https://cdn.jsdelivr.net/gh/feiss/aframe-environment-component@master/dist/aframe-environment-component.min.js"></script>-->
 <!--    <script src="js/animation-mixer.js"></script>-->
