--- a/JCBear/BearVR.html
+++ b/JCBear/BearVR.html
@@ -51,11 +51,17 @@
                   animation-mixer="clip: Dance; loop: repeat">
         </a-entity>
         <a-entity gltf-model="#door" id="door_E" position="-8.29 1 -4.55" navigate-on-click="url: fac2.html"></a-entity>
-        <a-entity gltf-model="#shoeW" id="shoeW_E" position="-2.3 0.98 0" navigate-on-click="url: shoeCh.html?color=white"></a-entity>
-        <a-entity gltf-model="#shoeR" id="shoeR_E" position="-0.8 0.98 0" navigate-on-click="url: shoeCh.html?color=red"></a-entity>
-        <a-entity gltf-model="#shoeP" id="shoeP_E" position="0.7 0.98 0" navigate-on-click="url: shoeCh.html?color=purple"></a-entity>
-        <a-entity gltf-model="#shoeG" id="shoeG_E" position="2.2 0.98 0" navigate-on-click="url: shoeCh.html?color=green"></a-entity>
-        <a-entity gltf-model="#shoeB" id="shoeB_E" position="3.7 0.98 0" navigate-on-click="url: shoeCh.html?color=black"></a-entity>
+<!--        <a-entity gltf-model="#shoeW" id="shoeW_E" position="-2.3 0.98 0" navigate-on-click="url: shoeCh.html?color=white"></a-entity>-->
+<!--        <a-entity gltf-model="#shoeR" id="shoeR_E" position="-0.8 0.98 0" navigate-on-click="url: shoeCh.html?color=red"></a-entity>-->
+<!--        <a-entity gltf-model="#shoeP" id="shoeP_E" position="0.7 0.98 0" navigate-on-click="url: shoeCh.html?color=purple"></a-entity>-->
+<!--        <a-entity gltf-model="#shoeG" id="shoeG_E" position="2.2 0.98 0" navigate-on-click="url: shoeCh.html?color=green"></a-entity>-->
+<!--        <a-entity gltf-model="#shoeB" id="shoeB_E" position="3.7 0.98 0" navigate-on-click="url: shoeCh.html?color=black"></a-entity>-->
+
+        <a-entity gltf-model="#shoeW" id="shoeW_E" position="-2.3 0.98 0" navigate-on-click="url: bshoeCh.html?color=white"></a-entity>
+        <a-entity gltf-model="#shoeR" id="shoeR_E" position="-0.8 0.98 0" navigate-on-click="url: bshoeCh.html?color=red"></a-entity>
+        <a-entity gltf-model="#shoeP" id="shoeP_E" position="0.7 0.98 0" navigate-on-click="url: bshoeCh.html?color=purple"></a-entity>
+        <a-entity gltf-model="#shoeG" id="shoeG_E" position="2.2 0.98 0" navigate-on-click="url: bshoeCh.html?color=green"></a-entity>
+        <a-entity gltf-model="#shoeB" id="shoeB_E" position="3.7 0.98 0" navigate-on-click="url: bshoeCh.html?color=black"></a-entity>
     </a-entity>color=
 </a-scene>
 </body>
