--- a/JCBear/shoeCh.html
+++ b/JCBear/shoeCh.html
@@ -64,6 +64,8 @@
 <model-viewer ar camera-controls alt="A 3D model" id="shoeShow" ios-src="Models/bee8.usdz"
               background-color="#222" magic-leap unstable-webxr shadow-intensity="1"></model-viewer>
 
+<!--<model-viewer src="Models/Astronaut.glb" ar camera-controls alt="A 3D model of an astronaut" background-color="#222" ios-src="Models/Astronaut.usdz" magic-leap unstable-webxr></model-viewer>-->
+
 <script>
     function GetRequest() {
         var url = decodeURI(location.search); //获取url中"?"符后的字串
