--- a/DeepAR-Web-v1.4.5/example/index.html
+++ b/DeepAR-Web-v1.4.5/example/index.html
@@ -175,13 +175,13 @@
     var deepAR = DeepAR({
         canvasWidth: canvasWidth,
         canvasHeight: canvasHeight,
-        licenseKey: 'cb88572a9bd6903ed6528f8224ee82fdb09bb5d2f35b56617dde7d166f68bf90ab7294c86235ad55',
+        licenseKey: '',
         canvas: document.getElementById('deepar-canvas'),
         numberOfFaces: 1,
         onInitialize: function () {
             // start video immediately after the initalization, mirror = true
             deepAR.startVideo(true);
-
+            d8fffaa7e3b8c8d68133ded8bdf05e8085a2a9d2759999652ecd1c73b4ab9c5a2af90ff15ab9ce8e
             // or we can setup the video element externally and call deepAR.setVideoElement (see startExternalVideo function below)
 
             deepAR.switchEffect(0, 'slot', effectSRC, function () {
