--- a/DeepAR-Web-v1.4.5/example/index.html
+++ b/DeepAR-Web-v1.4.5/example/index.html
@@ -175,13 +175,13 @@
     var deepAR = DeepAR({
         canvasWidth: canvasWidth,
         canvasHeight: canvasHeight,
-        licenseKey: '',
+        licenseKey: '353f9a4e3047c3caef0be0fbf5825bfdd484a93f0dec9b05d64f2ee25631d0e97a1e4dc8062ab1b8',
         canvas: document.getElementById('deepar-canvas'),
         numberOfFaces: 1,
         onInitialize: function () {
             // start video immediately after the initalization, mirror = true
             deepAR.startVideo(true);
-            d8fffaa7e3b8c8d68133ded8bdf05e8085a2a9d2759999652ecd1c73b4ab9c5a2af90ff15ab9ce8e
+
             // or we can setup the video element externally and call deepAR.setVideoElement (see startExternalVideo function below)
 
             deepAR.switchEffect(0, 'slot', effectSRC, function () {
