--- a/DeepAR-Web-v1.4.5/example/index.html
+++ b/DeepAR-Web-v1.4.5/example/index.html
@@ -19,32 +19,6 @@
             padding: 0px;
         }
 
-        #loader-wrapper {
-            position: fixed;
-            top: 0px;
-            left: 0px;
-            width: 100%;
-            height: 100%;
-            background-color: #fff;
-            text-align: center;
-        }
-
-        .loader {
-            display: inline-block;
-            position: relative;
-            top: 42%;
-            z-index: 1000;
-
-            width: 90px;
-            height: 90px;
-            margin: auto;
-            background-color: #00f;
-
-            border-radius: 100%;
-            -webkit-animation: sk-scaleout 1.5s infinite ease-in-out;
-            animation: sk-scaleout 1.5s infinite ease-in-out;
-        }
-
         @-webkit-keyframes sk-scaleout {
             0% {
                 -webkit-transform: scale(0)
@@ -66,63 +40,12 @@
                 opacity: 0;
             }
         }
-
-        .effect-carousel {
-            position: fixed !important;
-            width: 100%;
-            height: 130px;
-            bottom: 0px;
-            z-index: 999999;
-            background-color: rgba(255, 255, 255, 0.7);
-        }
-
-        .thumb {
-            margin-top: 15px;
-            margin-bottom: 15px;
-            margin-right: auto;
-            margin-left: auto;
-            position: relative;
-            opacity: 0.8;
-            transition: all 300ms ease;
-            height: 100px;
-        }
-
-        .slick-center .thumb {
-            -moz-transform: scale(1.3);
-            -ms-transform: scale(1.3);
-            -o-transform: scale(1.3);
-            -webkit-transform: scale(1.3);
-            color: #e67e22;
-            opacity: 1;
-            transform: scale(1.3);
-        }
-
-        .slick-slide {
-            width: 130px;
-        }
     </style>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
+
 <body>
 <canvas class="deepar" id="deepar-canvas" oncontextmenu="event.preventDefault()"></canvas>
-<div id="loader-wrapper">
-    <span class="loader"></span></span>
-</div>
 
-<div class="effect-carousel">
-    <div><img class="thumb" src="thumbs/aviators.png"></div>
-    <div><img class="thumb" src="thumbs/beard.png"></div>
-    <div><img class="thumb" src="thumbs/dalmatian.png"></div>
-    <div><img class="thumb" src="thumbs/flowers.png"></div>
-    <div><img class="thumb" src="thumbs/koala.png"></div>
-    <div><img class="thumb" src="thumbs/lion.png"></div>
-    <div><img class="thumb" src="thumbs/teddy_cigar.png"></div>
-</div>
-
-
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script type="text/javascript" src="lib/deepar.js"></script>
 <script type="text/javascript">
     function GetRequest() {
@@ -144,30 +67,27 @@
 
     var effectSRC = null;
     switch (effectColor) {
-        case "white":
-            effectSRC = "./effects/bearWhite";
+        case "orange":
+            effectSRC = "./effects/bearOrange";
             break;
-        case "black":
-            effectSRC = "./effects/bearBlack";
+        case "blue":
+            effectSRC = "./effects/bearBlue";
             break;
-        case "green":
-            effectSRC = "./effects/bearGreen";
+        case "yellow":
+            effectSRC = "./effects/bearYellow";
             break;
-        case "red":
+        case "pink":
             effectSRC = "./effects/bearPink";
             break;
-        case "purple":
-            effectSRC = "./effects/bearPurple";
-            break;
         default:
-            effectSRC = "./effects/bearWhite";
+            effectSRC = "./effects/bearOrange";
             break;
     }
 
     var canvasHeight = window.innerHeight;
     var canvasWidth = window.innerWidth;
 
-    // desktop, the width of the canvas is 0.66 * window height and on mobile it's fullscreen
+    //desktop, the width of the canvas is 0.66 * window height and on mobile it's fullscreen
     if (window.innerWidth > window.innerHeight) {
         canvasWidth = Math.floor(window.innerHeight * 0.66);
     }
@@ -214,89 +134,7 @@
         console.log('face visible', visible);
     };
 
-    deepAR.onVideoStarted = function () {
-        var loaderWrapper = document.getElementById('loader-wrapper');
-        loaderWrapper.style.display = 'none';
-    };
-
     deepAR.downloadFaceTrackingModel('models/models-68-extreme.bin');
-
-
-    function startExternalVideo() {
-
-        // create video element
-        var video = document.createElement('video');
-        video.muted = true;
-        video.loop = true;
-        video.controls = true;
-        video.setAttribute('playsinline', 'playsinline');
-        video.style.width = '100%';
-        video.style.height = '100%';
-
-        // put it somewhere in the DOM
-        var videoContainer = document.createElement('div');
-        videoContainer.appendChild(video);
-        videoContainer.style.width = '1px';
-        videoContainer.style.height = '1px';
-        videoContainer.style.position = 'absolute';
-        videoContainer.style.top = '0px';
-        videoContainer.style.left = '0px';
-        videoContainer.style['z-index'] = '-1';
-        document.body.appendChild(videoContainer);
-
-        navigator.mediaDevices.getUserMedia({video: true}).then(function (stream) {
-            try {
-                video.srcObject = stream;
-            } catch (error) {
-                video.src = URL.createObjectURL(stream);
-            }
-
-            setTimeout(function () {
-                video.play();
-            }, 50);
-        }).catch(function (error) {
-
-        });
-
-        // tell the DeepAR SDK about our new video element
-        deepAR.setVideoElement(video, true);
-    }
-
-
-    // Position the carousel to cover the canvas
-    if (window.innerWidth > window.innerHeight) {
-        var width = Math.floor(window.innerHeight * 0.66);
-        var carousel = document.getElementsByClassName('effect-carousel')[0];
-        carousel.style.width = width + 'px';
-        carousel.style.marginLeft = (window.innerWidth - width) / 2 + "px";
-    }
-
-
-    $(document).ready(function () {
-        $('.effect-carousel').slick({
-            slidesToShow: 1,
-            centerMode: true,
-            focusOnSelect: true,
-            arrows: false,
-            accessibility: false,
-            variableWidth: true
-        });
-
-        var effects = [
-            './effects/bearWhite',
-            './effects/bearBlack',
-            './effects/bearGreen',
-            './effects/bearPurple',
-            './effects/bearPink',
-            './effects/koala',
-            './effects/galaxy'
-        ];
-
-        $('.effect-carousel').on('afterChange', function (event, slick, currentSlide) {
-            deepAR.switchEffect(0, 'slot', effects[currentSlide]);
-        });
-
-    });
 </script>
 </body>
 </html>
